add Mapper with query

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,9 @@ add_executable(OrmTest main.cpp
         src/domain/B.cpp
         src/domain/B.h
         src/domain/Base.cpp
-        src/domain/Base.h)
+        src/domain/Base.h
+        src/database/Mapper.cpp
+        src/database/Mapper.h)
 target_link_libraries(OrmTest
         Qt5::Core
 )
