rename project accordingly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.29)
-project(OrmTest)
+project(QueryOverheadTest)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_AUTOMOC ON)
@@ -12,7 +12,7 @@ find_package(Qt5 COMPONENTS
         Sql
         REQUIRED)
 
-add_executable(OrmTest main.cpp
+add_executable(QueryOverheadTest main.cpp
         src/domain/A.cpp
         src/domain/A.h
         src/domain/B.cpp
@@ -21,7 +21,7 @@ add_executable(OrmTest main.cpp
         src/domain/Base.h
         src/database/Mapper.cpp
         src/database/Mapper.h)
-target_link_libraries(OrmTest
+target_link_libraries(QueryOverheadTest
         Qt5::Core
         Qt5::Sql
 )
